Fix test to be java 8 compatible